# TarantoolRustAPI

./: Cargo.toml  README.md
example/: Cargo.toml  run-benchmark-client.sh  run-benchmark-server.sh  run-functional-tests.sh
example/benchmark-client/: Cargo.toml
example/src/: lib.rs
example/test-tarantool/: ffi-tests.lua  functional-tests.lua  init-benchmark-server.lua
src/: lib.rs
src/tarantool/: api.rs  dict.rs  internal.rs  macros.rs  mod.rs
