[package]
name = "benchmark_client"
version = "0.1.0"
authors = ["mzheludkov"]
edition = "2018"

[dependencies]
maplit = "1"
futures-core = "0.3"
futures-sink = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
futures = "0.3"
bytes = "0.5"
log = "0"
env_logger = "0"
byteorder = "1.3"

tokio = { version = "0.2", features = ["full"] }
tokio-util = {version = "0.3", features= ["codec"]}

serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "0.14"
rmp-serialize = "0.8"
rmpv = { version = "0.4", features = ["with-serde"] }
base64 = "0.12"
sha1 = "0.6"
rustc-serialize = "0.3"
rusty_tarantool = "0.2"